#  [How to integrate with rust](https://stackoverflow.com/questions/46885292/how-to-launch-a-rust-application-from-visual-studio-code)

[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-inspector-egui = "0.18.0"
bevy_editor_pls = "0.3.0"
bevy_rapier2d = "0.21.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
